# university-jpo-lo-cpp

./: CMakeLists.txt  Utils.cpp  Utils.h  World.cpp  World.h  main.cpp
Entities/: Organism.cpp  Organism.h
Entities/Animals/: Animal.cpp  Animal.h  Fox.cpp  Fox.h  Sheep.cpp  Sheep.h  Sloth.cpp  Sloth.h  Viper.cpp  Viper.h  Wolf.cpp  Wolf.h
Entities/Plants/: Coca.cpp  Coca.h  Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Plant.cpp  Plant.h
