cmake_minimum_required(VERSION 3.17)
project(university_jpo_lo_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(university_jpo_lo_cpp main.cpp World.cpp World.h Entities/Organism.cpp Entities/Organism.h Entities/Plants/Plant.cpp Entities/Plants/Plant.h Entities/Animals/Animal.cpp Entities/Animals/Animal.h Entities/Animals/Wolf.cpp Entities/Animals/Wolf.h Entities/Animals/Sheep.cpp Entities/Animals/Sheep.h Entities/Animals/Sloth.cpp Entities/Animals/Sloth.h Entities/Animals/Fox.cpp Entities/Animals/Fox.h Entities/Plants/Grass.cpp Entities/Plants/Grass.h Entities/Plants/Dandelion.cpp Entities/Plants/Dandelion.h Entities/Plants/Coca.cpp Entities/Plants/Coca.h Entities/Animals/Viper.cpp Entities/Animals/Viper.h)